add swagger api for platformApi
