# internal/api/platform/types.go
@@ -7,3 +7,9 @@ type PlatformResponse struct {
 type CreatePlatformRequest struct {
 	Name string `json:"name" binding:"required"`
 }
+type PlatformListResponse struct {
+	Platforms []PlatformResponse `json:"platforms"`
+}
+type MessageResponse struct {
+	Message string `json:"message" example:"pong"`
+}
